update navbar links

--- a/home.html
+++ b/home.html
@@ -52,8 +52,8 @@
                 More
               </a>
               <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                <li><a class="dropdown-item" href="#">Github Pages URL</a></li>
-                <li><a class="dropdown-item" href="#">View Github Code</a></li>
+                <li><a class="dropdown-item" href="https://aspauldingcode.github.io/FET-Bootstrap-Assignment/">Github Pages URL</a></li>
+                <li><a class="dropdown-item" href="https://github.com/aspauldingcode/FET-Bootstrap-Assignment">View Github Code</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
