fix broken github pages

--- a/thanks.html
+++ b/thanks.html
@@ -20,7 +20,7 @@
 <h1>Thank you!</h1>
 
 <div class="position-center">
-  <div class="position-absolute top-50 start-50 translate-middle"><a href="home.html" class="btn btn-secondary btn-lg btn-outline-info">No Problem.</a>
+  <div class="position-absolute top-50 start-50 translate-middle"><a href="index.html" class="btn btn-secondary btn-lg btn-outline-info">No Problem.</a>
   </div>
 </div>
 
